--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/chess.js": "^0.10.0",
     "chalk": "^2.4.2",
     "lodash": "^4.17.11",
+    "ts-loader": "^5.3.3",
     "ts-node": "^8.0.3",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   },
   "scripts": {
-    "start": "ts-node --transpile-only chess.ts"
+    "start": "ts-node --transpile-only chess.ts",
+    "build": "webpack"
   }
 }
